# RRRBot

./: .gitignore  CMakeLists.txt  README  RRRBot.sln  config
Deploy/: Deploy.vcxproj
RRRBotApplication/: CMakeLists.txt
RRRBotApplication/src/: a.cpp  main.cpp
RRRBotCommon/: CMakeLists.txt  core_api.proto  core_api.proto~
RRRBotCommon/cpp/: core_api.pb.cc  core_api.pb.h
RRRBotCommon/include/: PlayerInfo.h
RRRBotCommon/python/: core_api_pb2.py
RRRBotCore/: CMakeLists.txt
RRRBotCore/include/: Core.h  CoreApi.h  CoreConfigurator.h  ICoreApi.h  RRRBot.h
RRRBotCore/lib/jsoncpp/: CMakeLists.txt
RRRBotCore/src/: Core.cpp  CoreConfigurator.cpp  DllMain.cpp  Misc.cpp  RRRbot.cpp
RRRBotFunctionality/: Command.cpp  Command.h  CommandCompletedState.cpp  CommandCompletedState.h  CommandPausedState.cpp  CommandPausedState.h  CommandRunningState.cpp  CommandRunningState.h  CommandState.h  Core.cpp  Core.h  GotoXYCommand.cpp  GotoXYCommand.h  Inventory.h  Item.h  Misc.cpp  Misc.h  MouseClickCommand.cpp  MouseClickCommand.h  MouseOffsets.h  MouseOffsetsManager.cpp  MouseOffsetsManager.h  MoveCommand.cpp  MoveCommand.h  OffsetsManager.cpp  OffsetsManager.h  Player.h  PlayerOffsets.h  PlayerOffsetsManager.cpp  PlayerOffsetsManager.h  PressKeyCommand.cpp  PressKeyCommand.h  ProcessManager.cpp  ProcessManager.h  RRRBotFunctionality.vcxproj  RRRBotFunctionality.vcxproj.filters  Target.h  TargetOffsets.h  TargetOffsetsManager.cpp  TargetOffsetsManager.h  (+5 more)
RRRBotGUI/: ConfigLoader.cpp  ConfigLoader.h  RRRBotGUI.vcxproj  RRRBotGUI.vcxproj.filters  main.cpp  rrrbotapplication.cpp  rrrbotapplication.h  rrrbotapplication.qrc  rrrbotapplication.ui
RRRBotGUI/GeneratedFiles/Debug/: moc_rrrbotapplication.cpp
lib/protorpc.cxx/: CMakeLists.txt
lib/protorpc.cxx/.hg/: dirstate  hgrc  undo.desc
lib/protorpc.cxx/.hg/cache/: branch2-served
lib/protorpc.cxx/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
lib/protorpc.cxx/.hg/store/data/: _c_h_a_n_g_e_s.txt.i  _c_make_lists.txt.i  _c_o_n_t_r_i_b_u_t_o_r_s.txt.i  _l_i_c_e_n_s_e.i  (+10 more)
vsprojects/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  RRRBot.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
vsprojects/RRRBot/: .gitignore  README  RRRBot.sln  config
vsprojects/RRRBot/Application/: Application.vcxproj  Application.vcxproj.filters
vsprojects/RRRBot/Common/: Common.vcxproj  Common.vcxproj.filters
vsprojects/RRRBot/Core/: Core.vcxproj  Core.vcxproj.filters
vsprojects/RRRBot/RRRBot/: RRRBot.vcxproj
vsprojects/RRRBot/jsoncpp/: jsoncpp.vcxproj  jsoncpp.vcxproj.filters
vsprojects/RRRBot/protoc/: protoc.vcxproj  protoc.vcxproj.filters  protoc.vcxproj.filters~  protoc.vcxproj~
vsprojects/RRRBot/protorpc/: ReadMe.txt  protorpc.vcxproj  protorpc.vcxproj.filters  protorpc.vcxproj~
vsprojects/RRRBotApplication/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RRRBotApplication.sln  RRRBotApplication.vcxproj  RRRBotApplication.vcxproj.filters  cmake_install.cmake
vsprojects/RRRBotCommon/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RRRBotCommon.sln  cmake_install.cmake
vsprojects/RRRBotCore/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RRRBotCore.sln  RRRBotCore.vcxproj  RRRBotCore.vcxproj.filters  cmake_install.cmake
vsprojects/RRRBotCore/lib/jsoncpp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  jsoncpp.sln  jsoncpp.vcxproj  jsoncpp.vcxproj.filters
(+348 files in other folders)
